changed major to major in

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
                 <div>
                     <h4>Education</h4>
                     <hr>
-                    <p>Major</p>
+                    <p> major in</p>
                     <p>Electronics and communication</p>
                     <br>
                 </div>
