--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
                     
                 </div>
                 <div>
-                    <h4>Education</h4>
+                    <h4>Edu</h4>
                     <hr>
                     <p> major in</p>
                     <p>Electronics and communication</p>
