--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
                     <h4>Education</h4>
                     <hr>
                     <p> major in</p>
-                    <p>Electronics and communication</p>
+                    <p>Electronics and communicatio</p>
                     <br>
                 </div>
                 <div>
